--- a/counterparty-client/Cargo.toml
+++ b/counterparty-client/Cargo.toml
@@ -18,3 +18,6 @@ cocoon = "0.4.0"
 rand = "0.8"
 thiserror = "1.0"
 lazy_static = "1.4.0"
+serde_yaml = "0.9.3"
+syntect = "5.2.0"
+termcolor = "1.4.1"
