password agent iteration 1

--- a/counterparty-client/Cargo.toml
+++ b/counterparty-client/Cargo.toml
@@ -15,7 +15,6 @@ hex = "0.4.3"
 bitcoin = "0.32.5"
 bip39 = "2.0.0"
 cocoon = "0.4.0"
-rand = "0.8"
 thiserror = "1.0"
 lazy_static = "1.4.0"
 serde_yaml = "0.9.3"
@@ -23,3 +22,10 @@ syntect = "5.2.0"
 termcolor = "1.4.1"
 dirs = "5.0"
 toml = "0.8.20"
+chacha20poly1305 = "0.10.1"
+argon2 = "0.5.0"
+rand = "0.8.5"
+sha2 = "0.10.6"
+constant_time_eq = "0.2.5"
+rpassword = "7.2.0"
+parking_lot = "0.12.1"
