--- a/counterparty-rs/Cargo.toml
+++ b/counterparty-rs/Cargo.toml
@@ -42,6 +42,7 @@ reqwest = { version = "0.12.12", features = ["json", "blocking"]}
 base64 = "0.21"
 env_logger = "0.10"
 log = "0.4"
+serde_cbor = "0.11"
 
 [build-dependencies]
 vergen = { version = "8.3.1", features = [
