--- a/counterparty-client/Cargo.toml
+++ b/counterparty-client/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0"
-clap = { version = "4.5.36", features = ["derive"] }
+clap = { version = "4.5.36", features = ["derive", "cargo"] }
 config = "0.13"
 reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
@@ -28,3 +28,4 @@ keyring = "2.0.0"
 once_cell = "1.17.1"
 secrecy = "0.8.0"
 indicatif = "0.17.11"
+clap_complete = "4.5.47"
