--- a/counterparty-client/Cargo.toml
+++ b/counterparty-client/Cargo.toml
@@ -29,3 +29,11 @@ once_cell = "1.17.1"
 secrecy = "0.8.0"
 indicatif = "0.17.11"
 clap_complete = "4.5.47"
+
+[[bin]]
+name = "xcp"
+path = "src/main.rs"
+
+[[bin]]
+name = "counterparty-client"
+path = "src/main.rs"
