Improve private keys security

--- a/counterparty-client/Cargo.toml
+++ b/counterparty-client/Cargo.toml
@@ -29,6 +29,7 @@ once_cell = "1.17.1"
 secrecy = "0.8.0"
 indicatif = "0.17.11"
 clap_complete = "4.5.47"
+zeroize = { version = "1.8.1", features = ["derive"] }
 
 [[bin]]
 name = "xcp"
