--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -161,6 +161,53 @@ services:
       - "--catch-up=bootstrap"
 
 
+  #####################
+  #  Signet Services  #
+  #####################
+
+  bitcoind-signet:
+    <<: *bitcoind-common
+    profiles:
+      - signet
+    ports: 
+      - "38332:38332"
+      - "39332:39332"
+      - "39333:39333"
+    command: 
+      - "-chain=signet"
+      - "-rpcallowip=0.0.0.0/0"
+      - "-rpcbind=0.0.0.0"
+      - "-rpcuser=rpc"
+      - "-rpcpassword=rpc"
+      - "-listen=1"
+      - "-server=1"
+      - "-printtoconsole=1"
+      - "-addresstype=legacy"
+      - "-txindex=1"
+      - "-prune=0"
+      - "-dbcache=4000"
+      - "-zmqpubrawtx=tcp://0.0.0.0:39332"
+      - "-zmqpubhashtx=tcp://0.0.0.0:39332"
+      - "-zmqpubsequence=tcp://0.0.0.0:39332"
+      - "-zmqpubrawblock=tcp://0.0.0.0:39333"
+
+  counterparty-core-signet:
+    <<: *counterparty-common
+    profiles:
+      - signet
+    links:
+      - bitcoind-signet
+    ports:
+      - "34000:34000"                                      # API v2
+      - "34100:34100"                                      # API v1
+    command:
+      - start
+      - "--signet"
+      - "--backend-connect=bitcoind-signet"
+      - "--rpc-host=0.0.0.0"
+      - "--api-host=0.0.0.0"
+      - "--catch-up=bootstrap"
+
 
   #####################
   # Regtest Services #
