integration test for signet

--- a/.github/workflows/integrations_test.yml
+++ b/.github/workflows/integrations_test.yml
@@ -59,6 +59,12 @@ jobs:
           - name: Testnet4 Rebuild
             test-path: integrations/rebuild_test.py
 
+            # Signet tests
+
+          # bootstrap, rollback and reparse,
+          - name: Signet Bootstrap And Catchup
+            test-path: integrations/signet_test.py
+
           # Other tests
 
           # run the docker-compose tests
